<resources>
    <string name="app_name">Your Simple QR Scanner</string>

    <string name="title_section1">Generate QR</string>
    <string name="title_section2">Scan QR</string>

    <string name="translation_plain_text_error">Oops, You haven\'t filled all the fields needed to generate the QR code.</string>

    <string name="translation_subtitle">Generate a QR code from</string>
    <!-- plain text to qr code-->
    <string name="translation_plain_text_transition">plain_text_transition_to_details</string>
    <string name="translation_plain_text_title">Plain text</string>
    <string name="translation_plain_text_content">Enter simple text and turn it into a QR code.</string>
    <string name="translation_plain_text_hint">Enter simple text...</string>

    <!-- url to qr code-->
    <string name="translation_url_transition">url_transition_to_details</string>
    <string name="translation_url_title">Web Link</string>
    <string name="translation_url_content">Create a QR code that leads directly to a web site.</string>
    <string name="translation_url_hint">Enter url ...</string>

    <!-- url to qr code-->
    <string name="translation_phone_transition">phone_transition_to_details</string>
    <string name="translation_phone_title">Phone Number</string>
    <string name="translation_phone_content">Create a QR code that acts as a phone number you can dial.</string>
    <string name="translation_phone_hint">Enter the phone number ... </string>

    <!-- export to file-->
    <string name="temporary_export_file_path">qr_generations</string>
    <string name="temporary_export_file_name">qr_code</string>

    <!-- decoded actions-->
    <string name="share_code">Share qr code</string>
    <string name="share_text">Share text content</string>
    <string name="share_error_no_permission">Permission to export QR to a temporary file denied.</string>
    <string name="share_qr_selector_message">Share Qr via</string>
    <string name="share_text_selector_message">Share via</string>
    <string name="copy_to_cliboard">Copy content to clip board</string>
    <string name="launch_link">Open web link</string>
    <string name="dial_text">Dial the number</string>
    <string name="empty_text">Could not process the content You are trying to encode.</string>

    <!-- scan fragment -->
    <string name="reset">RESET CAMERA</string>

</resources>
