<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@id/qr_code_type_icon"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/generation_form_icon_margin"
        android:src="@drawable/ic_link_black_36dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/list_with_padding">

        <TextView
            android:id="@+id/qr_code_type_top_title"
            android:text="@string/translation_subtitle"
            android:textSize="@dimen/translation_card_subtitle_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/qr_code_type_title"
            android:transitionName="@string/translation_url_transition"
            android:text="@string/translation_url_title"
            android:textSize="@dimen/translation_card_title_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/translation_card_inner_margin"/>

        <EditText
            android:id="@+id/qr_code_content"
            android:hint="@string/translation_url_hint"
            android:textSize="@dimen/translation_card_content_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_style"
            android:inputType="textUri"
            android:layout_marginBottom="@dimen/details_plain_text_bottom_margin"
            android:visibility="invisible"/>

    </LinearLayout>

</RelativeLayout>
