<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/list_with_padding">

    <TextView
        android:id="@+id/qr_code_type_top_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/translation_subtitle"
        android:textSize="@dimen/translation_card_subtitle_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/qr_code_type_title"
        android:layout_below="@+id/qr_code_type_top_title"
        android:layout_alignParentLeft="true"
        android:text="@string/translation_plain_text_title"
        android:textSize="@dimen/translation_card_title_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/translation_card_inner_margin"/>

    <EditText
        android:layout_below="@+id/qr_code_type_title"
        android:id="@+id/qr_code_type_content"
        android:text="@string/translation_plain_text_content"
        android:textSize="@dimen/translation_card_content_text_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/translation_card_inner_margin"/>

</LinearLayout>
